--- a/01-child.html
+++ b/01-child.html
@@ -1,9 +1,13 @@
 <h2> Anidar </h2>
 <h3>Ejempo:</h3>
+
 ul>li>a
+
 <h3>Resultado:</h3>
-<ul>
-	<li><a href=""><a></a>li>
-</ul>
 
 
+<xmp>
+	<ul>
+		<li><a href=""></a></li>
+	</ul>
+</xmp>
